--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
     kapt {
         generateStubs = true
     }
+
 }
 
 dependencies {
@@ -59,5 +60,9 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //Mockito
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.15.0'
 
 }
